--- a/WaveViewDemo/src/main/res/layout/font_layout.xml
+++ b/WaveViewDemo/src/main/res/layout/font_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.xiongcen.myapplication.font.BlurMaskFilterView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.xiongcen.myapplication.font.EmbossMaskFilterView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-</com.example.xiongcen.myapplication.font.BlurMaskFilterView>
+</com.example.xiongcen.myapplication.font.EmbossMaskFilterView>
