--- a/WaveViewDemo/src/main/res/layout/font_layout.xml
+++ b/WaveViewDemo/src/main/res/layout/font_layout.xml
@@ -1,6 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.xiongcen.myapplication.font.ShadowView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="#ffffff" >
 
-</com.example.xiongcen.myapplication.font.ShadowView>
+    <com.example.xiongcen.myapplication.font.SquareLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingTop="12dp"
+        android:layout_margin="5dp"
+        android:paddingRight="7dp"
+        android:paddingBottom="20dp"
+        android:layout_gravity="center"
+        android:background="#679135" >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#125793"
+            android:text="tomorrow"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
+            android:background="#495287"
+            android:text="AigeStudio" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:background="#976234"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#594342"
+            android:text="AigeStudio" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#961315"
+            android:text="AigeStudio" />
+    </com.example.xiongcen.myapplication.font.SquareLayout>
+
+</LinearLayout>
